--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@ body::-webkit-scrollbar {
          </div>
             </figure>
      <figure> 
-         <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study">
-             <img src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a>
+         <a  href="https://ttsecglobal.com/">
+             <img src="images/ttsecglobalf.png" alt="Wordpress Website"></a>
          <div style="text-align:center;">
-             <a href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"> 
-                 <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW PROJECT ➜</button></a>
+             <a href="https://ttsecglobal.com/"> 
+                 <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
      <figure>  
@@ -378,7 +378,7 @@ body::-webkit-scrollbar {
     <img class="card-img-top" style="width:30%;" src="images/web-design-service.png" alt="responsive web UX/UI design">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><a href="https://christellehddd.com/" title="web design" rel="dofollow">responsive web UX/UI design</a></h4>
-        <p class="card-text">It's essential that your website can adjust effortlessly to various screen sizes and resolutions. My area of expertise lies in <a href="https://christellehddd.com/" title="responsive web design and development" rel="dofollow">responsive web design</a>, which guarantees that your website appears and operates smoothly on a diverse array of devices, such as smartphones, tablets, laptops, and desktops.</br>
+        <p class="card-text">It's essential that your website can adjust effortlessly to various screen sizes and resolutions. My area of expertise lies in responsive web design, which guarantees that your website appears and operates smoothly on a diverse array of devices, such as smartphones, tablets, laptops, and desktops.</br>
     </div>
 </div>
 <div class="card">
