--- a/index.html
+++ b/index.html
@@ -537,8 +537,10 @@ Let's get started on the project! I will ensure you are consistently updated thr
  <span class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://behance.net/christellehddd">behance</a></span>
 </div>
 </div>
- 
+
 <div id="footer">
+     <a href="https://g.page/r/CWhZNV453lfOEBE/review"><img src="images/review.png"></a>
+
     ©2023 <a href="https://christellehddd.com/" style="color:#171717 !important;" >christellehddd</a>
 </div>
 
