--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 </div>
 
 <div id="footer">
-     <a href="https://g.page/r/CWhZNV453lfOEBE/review"><img src="images/review.png"></a>
+     <a href="https://g.page/r/CWhZNV453lfOEBE/review"><img src="images/review.png" width="10%"></a>
 
     ©2023 <a href="https://christellehddd.com/" style="color:#171717 !important;" >christellehddd</a>
 </div>
