--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ body::-webkit-scrollbar {
                 </div>
             </figure>
      <figure> 
-         <a href="https://imadaboukhalil.com/"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page by Christelle Haddad freelance web developer in lebanon" ></a><div  style="text-align:center;"><a href="https://imadaboukhalil.com/the-authentic-you"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page by Christelle Haddad freelance web developer in lebanon" ></a><div  style="text-align:center;"><a href="https://imadaboukhalil.com/the-authentic-you"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
      <figure> 
          <a href="https://heapapparel.com/">
              <img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website by Christelle Haddad freelance web developer in lebanon" ></a>
