--- a/index.html
+++ b/index.html
@@ -510,18 +510,19 @@ Let's get started on the project! I will ensure you are consistently updated thr
   <tr>  
       <td>  
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
-        <input type="text" placeholder="name" name="name" required>
-        <input type="email" placeholder="email" name="email" required><br>
-          <select name="service" required>
+      <label>Name <input type="text" placeholder="name" name="name" required> </label> 
+        <label>Email   <input type="email" placeholder="email" name="email" required><br></label>
+         <label>Service    <select name="service" required>
               <option value="service">service needed</option>
            <option value="web designdevelopment">website design/development</option>
             <option value="maintenance">website maintenance</option>
             <option value="seo">search engine optimization</option>
            <option value="emarketing">email marketing</option>
                </select>
-         
-        <textarea placeholder="message" required rows="5" name="describe your business in few sentences" required></textarea><br>
-        <button
+         </label>
+         <label>Message  <textarea placeholder="message" required rows="5" name="describe your business in few sentences" required></textarea><br>
+         </label>
+           <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
         data-callback='onSubmit' 
         data-action='submit' class="pulse-grow-on-hover g-recaptcha" style="color:#18161b; border:1px solid #18161b;" type="submit">send</button>
@@ -539,7 +540,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 </div>
 
 <div id="footer">
-     <a href="https://g.page/r/CWhZNV453lfOEBE/review"><img src="images/review.png" alt="write me a review on google" width="15%"/><br></a>
+     <a href="https://g.page/r/CWhZNV453lfOEBE/review">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="15%"/><br></a>
 
     ©2023 <a href="https://christellehddd.com/" style="color:#171717 !important;" >christellehddd</a>
 </div>
