--- a/index.html
+++ b/index.html
@@ -510,18 +510,18 @@ Let's get started on the project! I will ensure you are consistently updated thr
   <tr>  
       <td>  
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
-      <label>Name <input type="text" placeholder="name" name="name" required> </label> 
-        <label>Email   <input type="email" placeholder="email" name="email" required><br></label>
-         <label>Service    <select name="service" required>
+      <label>Name  </label> <input type="text" placeholder="name" name="name" required>
+        <label>Email  </label>   <input type="email" placeholder="email" name="email" required><br>
+         <label>Service  </label>    <select name="service" required>
               <option value="service">service needed</option>
            <option value="web designdevelopment">website design/development</option>
             <option value="maintenance">website maintenance</option>
             <option value="seo">search engine optimization</option>
            <option value="emarketing">email marketing</option>
                </select>
-         </label>
-         <label>Message  <textarea placeholder="message" required rows="5" name="describe your business in few sentences" required></textarea><br>
-         </label>
+       
+         <label>Message  </label>  <textarea placeholder="message" required rows="5" name="describe your business in few sentences" required></textarea><br>
+      
            <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
         data-callback='onSubmit' 
