--- a/index.html
+++ b/index.html
@@ -510,9 +510,9 @@ Let's get started on the project! I will ensure you are consistently updated thr
   <tr>  
       <td>  
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
-      <label>Name:  </label> <input type="text" placeholder="place your name here" name="name" required>
-        <label>Email:  </label>   <input type="email" placeholder="place your email here" name="email" required><br>
-         <label>Service:  </label>    <select name="service" required>
+      <label for="name">Name:  </label> <input type="text" placeholder="place your name here" name="name" required>
+        <label for="email">Email:  </label>   <input type="email" placeholder="place your email here" name="email" required><br>
+         <label for="service">Service:  </label>    <select name="service" required>
               <option value="service">choose the needed service</option>
            <option value="web designdevelopment">website design/development</option>
             <option value="maintenance">website maintenance</option>
@@ -520,7 +520,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
            <option value="emarketing">email marketing</option>
                </select>
        
-         <label>Message:  </label>  <textarea placeholder="place your message here" required rows="5" name="describe your business in few sentences" required></textarea><br>
+         <label for="describe your business in a few sentences">Message:  </label>  <textarea placeholder="place your message here" required rows="5" name="describe your business in few sentences" required></textarea><br>
       
            <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
