--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ body {
 body::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
 }
+    a{color:#dfd1c3!important;}
+    
         @font-face {
     font-family: 'Agustina Regular';
     font-style: normal;
