--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ body::-webkit-scrollbar {
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Freelance Web Developer • Web Design and SEO Services">
+<meta property="og:title" content="Web Developer in Lebanon • Christelle Haddad">
 <meta property="og:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
     <meta property="og:image" content="/meta-freelance-web-developer-lebanon.png">
 
@@ -194,7 +194,7 @@ body::-webkit-scrollbar {
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Freelance Web Developer • Web Design and SEO Services">
+<meta name="twitter:title" content="Web Developer in Lebanon • Christelle Haddad">
 <meta name="twitter:description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 "> 
 <meta name="twitter:image" content="/images/meta-freelance-web-developer-lebanon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -235,8 +235,8 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
        <h3 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h3></br>
-            <h1 class="d-none">freelance web developer in lebanon Web Design and SEO Services</h1>
-                    <h1 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h1>
+            <h1 class="d-none">freelance web developer in lebanon</h1>
+                    <h2 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h2>
                    <a href="#contact"> <button class="pulse-grow-on-hover" >Get in touch ➜</button></a><br>
                     
                 </td>
