--- a/index.html
+++ b/index.html
@@ -506,14 +506,14 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><p style="font-size: 17px;
-    margin-top: 2em;">If you'd like us to work together or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.
+    margin-top: 2em;">If you'd like us to work together or have any inquiries, feel free to get in touch at <a href="mailto:info@christellehddd.com">info@christellehddd.com</a> or fill out the form below. I am available for freelance projects and collaborations worldwide.
     </p></div>
  <table>
   <tr>  
       <td>  
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
-      <label for="name">Name:  </label> <input type="text" placeholder="place your name here" name="name" id="name" required>
-        <label for="email">Email:  </label>   <input type="email" placeholder="place your email here" name="email" id="email" required><br>
+      <label for="name">Name:  </label> <input type="text"  name="name" id="name" required>
+        <label for="email">Email:  </label>   <input type="email"  name="email" id="email" required><br>
          <label for="service">Service:  </label>    <select name="service" id="service" required>
               <option value="service">choose the service</option>
            <option value="web designdevelopment">website design/development</option>
@@ -522,7 +522,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
            <option value="emarketing">email marketing</option>
                </select>
        
-         <label for="message">Message:  </label>  <textarea placeholder="place your message here" required rows="5" name="describe your business in few sentences" id="message" required></textarea><br>
+         <label for="message">Message:  </label>  <textarea required rows="5" name="describe your business in few sentences" id="message" required></textarea><br>
       
            <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
