--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@ body::-webkit-scrollbar {
        With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
        make a strong web presence and achieve their goals. 
        I am available for projects worldwide.</p>
- <a href="https://calendly.com/christellehddd"> <br><button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
+ <a href="#contact"> <br><button class="pulse-grow-on-hover" >GET IN TOUCH ➜</button></a><br>
                    
      <center>
 
       <br>
 
-   <h2 style="text-transform:uppercase;color:#dfd2c3;text-align:center;    -webkit-text-fill-color: transparent;
+   <h2 style="text-transform:uppercase;color:#dfd2c3;text-align:center;-webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     -webkit-text-stroke: 1px #dfd2c3;">accreditation</h2>
    <div class="card-deck" style="text-align:center!important;">
@@ -542,7 +542,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 </div>
 
 <div id="footer">
-     <a href="https://g.page/r/CWhZNV453lfOEBE/review">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="15%"/><br></a>
+     <a href="https://g.page/r/CWhZNV453lfOEBE/review">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="25%"/><br></a>
 
     ©2023 <a href="https://christellehddd.com/" style="color:#171717 !important;" >christellehddd</a>
 </div>
