--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ body::-webkit-scrollbar {
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
        My name is Christelle, I am a <a href="https://christellehddd.com/" title="freelance web developer" rel="dofollow">freelance web developer</a> 
-       offering high-quality web development and SEO services. My expertise ensures that your business can thrive and achieve online success.
+       offering high-quality web development and SEO services. </br>My expertise ensures that your business can thrive and achieve online success.
        <br> 
        With a strong passion for creating user-centered websites and helping people establish a digital presence, I am dedicated to delivering high-quality solutions tailored to their needs. 
        Whether you are a company, a start-up, or an individual, I am here to help you achieve your goals through effective <a href="https://christellehddd.com/" title="website design and development" rel="dofollow">web design and development</a>.
