--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ body::-webkit-scrollbar {
 </style>
 
 <!-- HTML Meta Tags -->
-<title>Web Developer in Lebanon - Freelance Web Developer</title>
+<title>Freelance Web Developer in Lebanon - Christelle Haddad</title>
 <meta name="description" content="Looking for a skilled freelance web developer in Lebanon? Christelle Haddad is your go-to professional for WordPress, Shopify and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" />
     <meta name="author" content="Freelance web developer Christelle Haddad" />
