--- a/index.html
+++ b/index.html
@@ -536,15 +536,15 @@ Let's get started on the project! I will ensure you are consistently updated thr
 
 
 <div class="social_footer" >
-    <span class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.linkedin.com/in/christellehaddad/">linkedin</a></span>
- <span class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://behance.net/christellehddd">behance</a></span>
+    <span class="animated zoomIn" style="animation-delay:2.2s;color:#171717!important;"><a class="social" href="https://www.linkedin.com/in/christellehaddad/">linkedin</a></span>
+ <span class="animated zoomIn" style="animation-delay:2.4s;color:#171717!important;"><a class="social" href="https://behance.net/christellehddd">behance</a></span>
 </div>
 </div>
 
-<div id="footer">
+<div id="footer" style="color:#171717!important;">
      <a href="https://g.page/r/CWhZNV453lfOEBE/review">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="20%"/><br></a>
 
-    ©2023 <a href="https://christellehddd.com/" style="color:#171717 !important;" >christellehddd</a>
+    ©2023 <a href="https://christellehddd.com/">christellehddd</a>
 </div>
 
    <script src="index.js" type="text/javascript"></script>
