--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@ Let's get started on the project! I will ensure you are consistently updated thr
 </div>
 
 <div id="footer">
-     <a href="https://g.page/r/CWhZNV453lfOEBE/review" style="color:#171717 !important;">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="20%"/><br></a>
+     <a href="https://g.page/r/CWhZNV453lfOEBE/review" style="color:#171717!important;">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="20%"/><br></a>
 
-    ©2023 <a href="https://christellehddd.com/">christellehddd</a>
+    ©2023 <a href="https://christellehddd.com/" style="color:#171717!important;">christellehddd</a>
 </div>
 
    <script src="index.js" type="text/javascript"></script>
