--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@ body::-webkit-scrollbar {
                 </div>
             </figure>
      <figure> 
-         <a href="https://www.abhagala.com/"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed by Christelle Haddad freelance web developer in lebanon for Odindigital.eu" ></a><div  style="text-align:center;"><a href="https://www.abhagala.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+         <a href="https://abhagala.com/"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed by Christelle Haddad freelance web developer in lebanon for Odindigital.eu" >
+         </a><div  style="text-align:center;">
+             <a href="https://abhagala.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
      <figure> 
          <a href="https://heapapparel.com/">
              <img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website by Christelle Haddad freelance web developer in lebanon" ></a>
