--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 }
 </script>
 
-<script>
+<!--<script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
-</script>
+</script>-->
 
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
