--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ body::-webkit-scrollbar {
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
        <h3 style="color:#dfd2c3;">Hi! I am Christelle, a Freelance Web Developer.</h3></br>
             <h1 class="d-none">web developer in lebanon</h1>
-                    <h1 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h1>
+                    <h1 class="big_header" ><span>I build websites that drive professionalism, growth, and <i>trust</i>.</span></h1>
                    <a href="#contact"> <button class="pulse-grow-on-hover" >Get in touch ➜</button></a><br>
                     
                 </td>
