--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ body::-webkit-scrollbar {
          </div>
             </figure>
      <figure>  
-         <a href="https://thesteakhouse.webflow.io/"> 
+         <a href="#"> 
              <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project by Christelle Haddad freelance web developer in lebanon"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
@@ -320,15 +320,15 @@ body::-webkit-scrollbar {
      <figure>  
          <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project by Christelle Haddad freelance web developer in lebanon"> 
          <div style="text-align:center;">
-             <a href="http://dameauxdoigtsdefee.com/"> 
+             <a href="#"> 
          <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure> 
      <figure> 
-         <a href="https://pepesrestaurant.webflow.io/">
+         <a href="#">
              <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project by Christelle Haddad freelance web developer in lebanon"></a>
          <div  style="text-align:center;">
-             <a href="https://pepesrestaurant.webflow.io/">
+             <a href="#">
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
