--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
       <label for="name">Name:  </label> <input type="text"  name="name" id="name" required>
         <label for="email">Email:  </label>   <input type="email"  name="email" id="email" required><br>
          <label for="service">Service:  </label>    <select name="service" id="service" required>
-              <option value="service">choose the service</option>
+              <option value="service">say hello👋 or choose the service</option>
            <option value="web designdevelopment">website design/development</option>
             <option value="maintenance">website maintenance</option>
             <option value="seo">search engine optimization</option>
