--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><p style="font-size: 17px;
-    margin-top: 2em;">If you'd like us to work together or have any inquiries, feel free to get in touch at <i></i><a style="color:black !important;" href="mailto:info@christellehddd.com">info@christellehddd.com</a><i> or fill out the form below. I am available for freelance projects and collaborations worldwide.
+    margin-top: 2em;">If you'd like us to work together or have any inquiries, feel free to get in touch at <i><a style="color:black !important;" href="mailto:info@christellehddd.com">info@christellehddd.com</a><i> or fill out the form below. I am available for freelance projects and collaborations worldwide.
     </p></div>
  <table>
   <tr>  
