--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><p style="font-size: 17px;
-    margin-top: 2em;">If you'd like us to work together or have any inquiries, feel free to get in touch at <i><a style="color:black !important;" href="mailto:info@christellehddd.com">info@christellehddd.com</a><i> or fill out the form below. I am available for freelance projects and collaborations worldwide.
+    margin-top: 2em;">If you'd like us to work together or have any inquiries, feel free to get in touch at <a style="color:black !important;" href="mailto:info@christellehddd.com">info@christellehddd.com</a> or fill out the form below. I am available for freelance projects and collaborations worldwide.
     </p></div>
  <table>
   <tr>  
@@ -513,14 +513,15 @@ Let's get started on the project! I will ensure you are consistently updated thr
       <label for="name">Name*  </label> <input type="text"  name="name" id="name" required>
         <label for="email">Email*  </label>   <input type="email"  name="email" id="email" required><br>
          <label for="service">Service  </label>    <select name="service" id="service">
-              <option value="service">choose the service</option>
+              <option value="service">choose from the dropdown</option>
            <option value="web designdevelopment">website design/development</option>
             <option value="maintenance">website maintenance</option>
             <option value="seo">search engine optimization</option>
            <option value="emarketing">email marketing</option>
+             <option value="hi">hello👋</option>
                </select>
        
-         <label for="message">Message  </label>  <textarea required rows="5" name="describe your business in few sentences or just say hello👋 " id="message" required></textarea><br>
+         <label for="message">Message  </label>  <textarea required rows="5" name="describe your business in few sentences " id="message" required></textarea><br>
       
            <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
@@ -542,7 +543,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="footer">
      <a href="https://g.page/r/CWhZNV453lfOEBE/review" style="color:#171717!important;">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="20%"/><br></a>
 
-    ©2023 <a href="https://christellehddd.com/" style="color:#171717!important;">christellehddd</a>
+    ©2023 <a href="https://christellehddd.com/" style="color:#171717!important;">Christelle Haddad</a>
 </div>
 
    <script src="index.js" type="text/javascript"></script>
