--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ body::-webkit-scrollbar {
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
      <figure> <a href="https://wpadvisors.ch/">
-         <img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website by Christelle Haddad freelance web developer in lebanon" ></a> 
+         <img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website by Christelle Haddad" ></a> 
          <div style="text-align:center;"> 
              <a href="https://wpadvisors.ch/"> 
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
@@ -255,7 +255,7 @@ body::-webkit-scrollbar {
          </div>
 </figure>
             <figure> <a href="https://protecevents.com/">
-                <img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website by Christelle Haddad freelance web developer in lebanon" ></a>
+                <img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website by Christelle Haddad" ></a>
                 <div style="text-align:center;"> 
                     <a href="https://protecevents.com/"> 
                         <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
@@ -264,7 +264,7 @@ body::-webkit-scrollbar {
             </figure>
     <figure> 
         <a href="https://ptstrading.net/">
-            <img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website by Christelle Haddad freelance web developer in lebanon" ></a>
+            <img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website by Christelle Haddad" ></a>
         <div  style="text-align:center;">
             <a href="https://ptstrading.net/"> 
             <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
@@ -280,32 +280,53 @@ body::-webkit-scrollbar {
             </figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
             <figure>  
-                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agostoo.png" alt="Shopify Agosto Store Website UAE by Christelle Haddad freelance web developer in lebanon"></a>
+                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agostoo.png" alt="Shopify Agosto Store Website UAE by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.agostostore.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
      <figure> 
-         <a href="https://abhagala.com/"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed by Christelle Haddad freelance web developer in lebanon for Odindigital.eu" >
+         <a href="https://abhagala.com/"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
              <a href="https://abhagala.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
      <figure> 
          <a href="https://heapapparel.com/">
-             <img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website by Christelle Haddad freelance web developer in lebanon" ></a>
+             <img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website by Christelle Haddad" ></a>
          <div  style="text-align:center;"><a href="https://heapapparel.com/"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
      <figure>  
          <a href="#"> 
-             <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project by Christelle Haddad freelance web developer in lebanon"></a>
+             <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project by Christelle Haddad"></a>
+         <div  style="text-align:center;"><a href="#"> 
+             <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+         </div>
+            </figure>
+             <figure>  
+         <a href="https://mountainboons.com"> 
+             <img onclick="magnify($(this).attr('src'))"src="images/mountainboons.png" alt="Mountain Boons Wordpress Project by Christelle Haddad"></a>
+         <div  style="text-align:center;"><a href="https://mountainboons.com"> 
+             <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+         </div>
+            </figure>
+               <figure>  
+         <a href="https://taigalarnaca.com"> 
+             <img onclick="magnify($(this).attr('src'))"src="images/taiga.png" alt="Taiga Larnaca Project for Odindigital"></a>
+         <div  style="text-align:center;"><a href="https://taigalarnaca.com"> 
+             <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+         </div>
+            </figure>
+              <figure>  
+         <a href="#"> 
+             <img onclick="magnify($(this).attr('src'))"src="images/junky.png" alt="Junky shopper Project for Odindigital"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
      <figure> 
          <a  href="https://ttsecglobal.com/">
-             <img src="images/ttsecglobalf.png" alt="Wordpress Website"></a>
+             <img src="images/ttsecglobalf.png" alt="TTSEC Global Wordpress Project for Odindigital"></a>
          <div style="text-align:center;">
              <a href="https://ttsecglobal.com/"> 
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
@@ -317,13 +338,7 @@ body::-webkit-scrollbar {
                     <a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
-     <figure>  
-         <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project by Christelle Haddad freelance web developer in lebanon"> 
-         <div style="text-align:center;">
-             <a href="#"> 
-         <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
-         </div>
-            </figure> 
+    
      <figure> 
          <a href="#">
              <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project by Christelle Haddad freelance web developer in lebanon"></a>
