--- a/index.html
+++ b/index.html
@@ -337,17 +337,24 @@ body::-webkit-scrollbar {
          </div>
             </figure>
      <figure>  
-                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus by Christelle Haddad freelance web developer in lebanon"></a>
+                <a href="https://sites.google.com/view/nanasservices/home"> <img onclick="magnify($(this).attr('src'))" src="images/nanas.png" alt="Nanas Services by Christelle Haddad"></a>
+                <div  style="text-align:center;">
+                    <a href="https://sites.google.com/view/nanasservices/home"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                </div>
+            </figure>
+
+              <figure>  
+                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
-    
+            
      <figure> 
-         <a href="#">
-             <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project by Christelle Haddad freelance web developer in lebanon"></a>
+         <a href="https://pepesrestaurant.webflow.io/">
+             <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project by Christelle Haddad"></a>
          <div  style="text-align:center;">
-             <a href="#">
+             <a href="https://pepesrestaurant.webflow.io/">
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
