--- a/index.html
+++ b/index.html
@@ -286,13 +286,13 @@ body::-webkit-scrollbar {
          <a href="https://abhagala.com/"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
              <a href="https://abhagala.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-   <figure>  
+<!--   <figure>  
          <a href="#"> 
              <img onclick="magnify($(this).attr('src'))" src="images/taiga.png" alt="Taiga Larnaca Project for Odindigital"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
-            </figure>
+            </figure>-->
             
      <figure>  
          <a href="#"> 
@@ -302,13 +302,13 @@ body::-webkit-scrollbar {
          </div>
             </figure>
 
-              <figure>  
+        <!--      <figure>  
          <a href="#"> 
              <img onclick="magnify($(this).attr('src'))"src="images/junky.png" alt="Junky shopper Project for Odindigital"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
-            </figure>
+            </figure>-->
             
              <figure>  
          <a href="https://mountainboons.com/"> 
@@ -345,13 +345,13 @@ body::-webkit-scrollbar {
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
-     <figure>  
+  <!--   <figure>  
                 <a href="https://sites.google.com/view/nanasservices/home"> <img onclick="magnify($(this).attr('src'))" src="images/nanas.png" alt="Nanas Services by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://sites.google.com/view/nanasservices/home"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
-
+-->
               <figure>  
                 <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus by Christelle Haddad"></a>
                 <div  style="text-align:center;">
