--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@ body::-webkit-scrollbar {
          <a href="https://abhagala.com/"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
              <a href="https://abhagala.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-<!--   <figure>  
+  <figure>  
          <a href="#"> 
              <img onclick="magnify($(this).attr('src'))" src="images/taiga.png" alt="Taiga Larnaca Project for Odindigital"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
-            </figure>-->
+            </figure>
             
      <figure>  
          <a href="#"> 
@@ -303,13 +303,13 @@ body::-webkit-scrollbar {
          </div>
             </figure>
 
-        <!--      <figure>  
+         <figure>  
          <a href="#"> 
              <img onclick="magnify($(this).attr('src'))"src="images/junky.png" alt="Junky shopper Project for Odindigital"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
-            </figure>-->
+            </figure>
             
              <figure>  
          <a href="https://mountainboons.com/"> 
@@ -346,13 +346,13 @@ body::-webkit-scrollbar {
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
-  <!--   <figure>  
-                <a href="https://sites.google.com/view/nanasservices/home"> <img onclick="magnify($(this).attr('src'))" src="images/nanas.png" alt="Nanas Services by Christelle Haddad"></a>
+ <figure>  
+                <a href="https://sites.google.com/view/danys-shop"> <img onclick="magnify($(this).attr('src'))" src="images/danys-shop.png" alt="Danys Shop by Christelle Haddad"></a>
                 <div  style="text-align:center;">
-                    <a href="https://sites.google.com/view/nanasservices/home"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                    <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
--->
+
               <figure>  
                 <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus by Christelle Haddad"></a>
                 <div  style="text-align:center;">
