--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 }
 </script>
 
-<!--<script>
+<script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
-</script>-->
+</script>
 
 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
@@ -211,9 +211,9 @@ body::-webkit-scrollbar {
         <!-- End Google Tag Manager (noscript) -->
         
         <div id="invertedcursor"></div>
-        <div id="loading">
+     <!--   <div id="loading">
             <div id="spinner"></div>
-        </div>
+        </div>-->
      <!--   <div id="magnify">
             <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
             <div id="img_here"></div> -->
