--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@ body::-webkit-scrollbar {
        
             
      <figure> 
-         <a href="https://abhagala.com/"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
+         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
-             <a href="https://abhagala.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+             <a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
   <figure>  
-         <a href="#"> 
+         <a href="https://taigalarnaca.com/"> 
              <img onclick="magnify($(this).attr('src'))" src="images/taiga.png" alt="Taiga Larnaca Project for Odindigital"></a>
-         <div  style="text-align:center;"><a href="#"> 
+         <div  style="text-align:center;"><a href="https://taigalarnaca.com/"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
