--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ body::-webkit-scrollbar {
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Freelance Web Developer in Lebanon • Christelle Haddad">
+<meta property="og:title" content="Freelance Web Developer in Lebanon - Christelle Haddad">
 <meta property="og:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can thrive and achieve online success. Let's boost your online presence! 🚀  ">
     <meta property="og:image" content="/meta-freelance-web-developer-lebanon.png">
 
@@ -195,7 +195,7 @@ body::-webkit-scrollbar {
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Freelance Web Developer in Lebanon • Christelle Haddad">
+<meta name="twitter:title" content="Freelance Web Developer in Lebanon - Christelle Haddad">
 <meta name="twitter:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can thrive and achieve online success. Let's boost your online presence! 🚀 "> 
 <meta name="twitter:image" content="/images/meta-freelance-web-developer-lebanon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -236,8 +236,8 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
        <h3 style="color:#dfd2c3;">Hi! I am Christelle, a Freelance Web Developer.</h3></br>
-            <h1 class="d-none">web developer in lebanon</h1>
-                    <h1 class="big_header" ><span>I build websites that drive professionalism, growth, and <i>trust</i>.</span></h1>
+            <h1 class="d-none">freelance web developer in lebanon</h1>
+                    <h3 class="big_header" ><span>I build websites that drive professionalism, growth, and <i>trust</i>.</span></h3>
                    <a href="#contact"> <button class="pulse-grow-on-hover" >Get in touch ➜</button></a><br>
                     
                 </td>
