--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ body::-webkit-scrollbar {
             
      <figure> 
          <a  href="https://ttsecglobal.com/">
-             <img src="images/ttsecglobalf.png" alt="TTSEC Global Wordpress Project for Odindigital"></a>
+             <img src="images/ttsec-site.png" alt="TTSEC Global Wordpress Project with Odindigital"></a>
          <div style="text-align:center;">
              <a href="https://ttsecglobal.com/"> 
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
