--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ body::-webkit-scrollbar {
              <figure> 
          
          <a href="https://heapapparel.com/">
-             <img onclick="magnify($(this).attr('src'))" src="images/heapp.png" alt="HEAP Apparel Website by Christelle Haddad" ></a>
+             <img onclick="magnify($(this).attr('src'))" src="images/heap-site.png" alt="HEAP Apparel Website by Christelle Haddad" ></a>
          <div  style="text-align:center;"><a href="https://heapapparel.com/"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
@@ -330,7 +330,7 @@ body::-webkit-scrollbar {
             
 
                  <figure>  
-                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agostoo.png" alt="Shopify Agosto Store Website UAE by Christelle Haddad"></a>
+                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agosto-site.png" alt="Shopify Agosto Store Website UAE by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.agostostore.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
