--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@ body::-webkit-scrollbar {
        
             
      <figure> 
-         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abhaa.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
+         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abha-site.jpeg" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
-             <a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+             <a href="christellehddd.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
   <figure>  
          <a href="https://taigalarnaca.com/"> 
              <img onclick="magnify($(this).attr('src'))" src="images/taiga.png" alt="Taiga Larnaca Project for Odindigital"></a>
