--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ body::-webkit-scrollbar {
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
      <figure> <a href="https://wpadvisors.ch/">
-         <img onclick="magnify($(this).attr('src'))" src="images/wpaa.png" alt="Wordpress WPA Website by Christelle Haddad" ></a> 
+         <img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website by Christelle Haddad" ></a> 
          <div style="text-align:center;"> 
              <a href="https://wpadvisors.ch/"> 
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
