--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ body::-webkit-scrollbar {
             
 
                  <figure>  
-                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agosto.png" alt="Shopify Agosto Store Website UAE by Christelle Haddad"></a>
+                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agostoo.png" alt="Shopify Agosto Store Website UAE by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.agostostore.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
