--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@ body::-webkit-scrollbar {
                     <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
-<!--
+
               <figure>  
-                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus by Christelle Haddad"></a>
+                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant-website.png" alt="LevantLink Website Cyprus by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
-            -->
+         
 <!--     <figure> 
          <a href="https://pepesrestaurant.webflow.io/">
              <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project by Christelle Haddad"></a>
