--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ body::-webkit-scrollbar {
              <a href="christellehddd.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
  -->
             <figure> 
-         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/toumajean-website.png" alt="Toumajean website developed for Dekmak agency" >
+         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/toumajean-website.png" alt="Toumajean website" >
          </a><div  style="text-align:center;">
              <a href="https://toumajeancouture.co/" rel=”nofollow”> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
  
