--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ body::-webkit-scrollbar {
          </div>
             </figure>
  <figure>  
-                <a href="https://sites.google.com/view/danys-shop"> <img onclick="magnify($(this).attr('src'))" src="images/danys-shop.png" alt="Danys Shop by Christelle Haddad"></a>
+                <a href="https://sites.google.com/view/danys-shop"> <img onclick="magnify($(this).attr('src'))" src="images/danysshop-website.png" alt="Danys Shop by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
