--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@ body::-webkit-scrollbar {
             </figure>
 -->
     <figure>  
-         <a href="#"> 
+         <a href="https://junkyshopper.com/"> 
              <img onclick="magnify($(this).attr('src'))"src="images/junkyshopper-website.png" alt="Junky shopper Website for Odindigital"></a>
-         <div  style="text-align:center;"><a href="#"> 
+         <div  style="text-align:center;"><a href="https://junkyshopper.com/"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
             </figure>
@@ -348,7 +348,7 @@ body::-webkit-scrollbar {
             
      <figure> 
          <a  href="https://ttsecglobal.com/">
-             <img src="images/ttsecglobal-website.png" alt="TTSEC Global Wordpress Project with Odindigital"></a>
+             <img src="images/ttsecglobal-website.png" alt="TTSEC Global Wordpress Project for Odindigital"></a>
          <div style="text-align:center;">
              <a href="https://ttsecglobal.com/"> 
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
